# tgn.cpp

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  all_notes.py  notes.py
.github/workflows/: ci.yml
examples/: CMakeLists.txt  link_pred.cpp  main.cpp  node_pred.cpp  util.h
include/: _recency_sampler.h  _scatter_ops.h  lib.h  tgn.h
scripts/: build.sh  download_tgb_data.sh  run_tests.sh
src/: recency_sampler.h  scatter_ops.h  store.cpp  tgn.cpp
test/: test_recency_sampler.cpp  test_scatter_ops.cpp  test_store.cpp  test_tgn.cpp
